python/src/gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP

# Gateway svc will need an ingress.yaml wo allow inflow of traffic from outside
